tests/ui/launch/non_kernel.stderr
error[RX3004]: cannot launch a `device` function: only a `kernel` function can be launched
 --> $DIR/launch/non_kernel.rx:5:19
  |
5 |     stream.launch(helper, GridDim(n), BlockDim(n), (out, x, n)); //~ ERROR RX3004
  |                   ^^^^^^ only a `kernel` function can be launched
